--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/JavaTheNutt/home_erp_proto_04#readme",
   "devDependencies": {
     "chai": "^4.1.1",
+    "chai-shallow-deep-equal": "^1.4.6",
     "cross-env": "^5.0.5",
     "mocha": "^3.5.0",
+    "mockery": "^2.1.0",
     "nodemon": "^1.11.0",
     "nyc": "^11.1.0",
     "sinon": "^3.2.1",
